--- a/style.css
+++ b/style.css
@@ -160,9 +160,9 @@ h4 {
 .search {
     background-color: rgb(255, 255, 255);
     color: royalblue;
-    width: 2ch;
-    min-width: 2ch;
-    text-align: center;
+    width: 3ch;
+    min-width: 3ch;
+    text-align: start;
     max-width: 30ch;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1rem;
